<resources>
    <string name="what_do_you_want_to_share">What do you want to share?</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="the_audio_file">The audio file</string>
    <string name="do_you_want_to_set_x_as_ringtone">Do you want to set %1$s as your ringtone?</string>
    <string name="x_has_been_set_as_ringtone">Set %1$s as your ringtone.</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_share">Share</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_grant">Grant</string>
    <string name="action_done">Done</string>
    <string name="action_skip">Skip</string>
    <string name="action_about">About</string>
    <string name="action_show_intro">Show intro</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_playing_queue">Playing queue</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_search">Search</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play">Play</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_scan">Scan</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="unplayable_file">Couldn\u2019t play this song.</string>
    <string name="biography_unavailable">Couldn\u2019t find a biography entry for this artist.</string>
    <string name="wiki_unavailable">Couldn\u2019t find a wiki entry for this album.</string>
    <string name="biography">Biography</string>
    <string name="wiki">Wiki</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="album_artist">Album artist</string>
    <string name="year">Year</string>
    <string name="track">Track</string>
    <string name="track_hint">"Track (2 for track 2 or 3004 for CD3 track 4)"</string>
    <string name="lyrics">Lyrics</string>
    <string name="album_or_artist_empty">The title or artist is empty.</string>
    <string name="saving_changes">Saving changes</string>
    <string name="saving_to_file">Saving to file…</string>
    <string name="label_details">Details</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_file_format">Format</string>
    <string name="label_track_length">Length</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="label_playing_queue">Playing queue</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="no_results">No results</string>
    <string name="action_re_download_artist_image">Update artist image</string>
    <string name="updated_artist_image">Artist image updated.</string>
    <string name="could_not_update_artist_image">Couldn\u2019t update artist image.</string>
    <string name="updating">Updating…</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into the playlist %2$s.</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="deleted_playlist_x">Deleted playlist %1$s.</string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="delete_playlist_x"><![CDATA[
        Delete the playlist <b>%1$s</b>?
        ]]></string>
    <string name="clear_playlist_x"><![CDATA[
        Clear the playlist <b>%1$s</b>? This can\u2019t be undone!
        ]]></string>
    <string name="delete_x_playlists"><![CDATA[
        Delete <b>%1$d</b> playlists?
        ]]></string>
    <string name="delete_song_x"><![CDATA[
        Delete the song <b>%1$s</b>?
        ]]></string>
    <string name="delete_x_songs"><![CDATA[
        Delete <b>%1$d</b> songs?
        ]]></string>
    <string name="remove_song_x_from_playlist"><![CDATA[
        Remove the song <b>%1$s</b> from the playlist?
        ]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[
        Remove <b>%1$d</b> songs from the playlist?
        ]]></string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="remove_song_from_playlist_title">Remove song from playlist</string>
    <string name="remove_songs_from_playlist_title">Remove songs from playlist</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="save_playlist_title">Save as file</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_show_lyrics">Show lyrics</string>
    <string name="last_opened">Last opened</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="black_theme_name">Black (AMOLED)</string>
    <string name="always">Always</string>
    <string name="only_on_wifi">Only on Wi-Fi</string>
    <string name="never">Never</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="past_three_months">Past 3 months</string>
    <string name="this_year">This year</string>
    <string name="equalizer">Equalizer</string>
    <string name="pref_header_colors">Colors</string>
    <string name="pref_header_now_playing_screen">Now playing</string>
    <string name="pref_title_general_theme">General theme</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_images">Images</string>
    <string name="pref_header_lockscreen">Lockscreen</string>
    <string name="pref_header_playlists">Playlists</string>
    <string name="pref_header_notification">Notification</string>
    <string name="pref_title_navigation_bar">Colored navigation bar</string>
    <string name="pref_title_app_shortcuts">Colored app shortcuts</string>
    <string name="pref_title_set_default_start_page">Start page</string>
    <string name="pref_title_album_art_on_lockscreen">Show album cover</string>
    <string name="pref_title_auto_download_metadata">Auto download metadata</string>
    <string name="pref_title_blurred_album_art">Blur album cover</string>
    <string name="pref_title_colored_notification">Colored notification</string>
    <string name="pref_title_classic_notification">Classic notification design</string>
    <string name="pref_title_ignore_media_store_artwork">Ignore Media Store covers</string>
    <string name="pref_title_gapless_playback">Gapless playback</string>
    <string name="pref_title_force_square_album_art">Square album cover</string>
    <string name="pref_title_opaque_toolbar_now_playing">Opaque toolbar</string>
    <string name="pref_title_opaque_statusbar_now_playing">Opaque statusbar</string>
    <string name="pref_title_larger_title_box_now_playing">Larger title box</string>
    <string name="pref_title_alternative_progress_slider_now_playing">Alternative progress slider</string>
    <string name="pref_title_playback_controller_card_now_playing">Show card below playback controls</string>
    <string name="pref_title_colored_playback_controls_now_playing">Colored playback controls</string>
    <string name="pref_title_audio_ducking">Reduce volume on focus loss</string>
    <string name="primary_color">Primary color</string>
    <string name="accent_color">Accent color</string>
    <string name="primary_color_desc">The primary theme color, defaults to indigo.</string>
    <string name="accent_color_desc">The accent theme color, defaults to pink.</string>
    <string name="pref_summary_album_art_on_lockscreen">Uses the current songs album cover as lockscreen wallpaper.</string>
    <string name="pref_summary_blurred_album_art">Blurs the album cover on the lockscreen. Can cause problems with third party apps and widgets.</string>
    <string name="pref_summary_classic_notification">Use the classic notification design.</string>
    <string name="pref_summary_colored_notification">"Colors the notification in the album cover\u2019s vibrant color."</string>
    <string name="pref_summary_gapless_playback">"Can cause playback issues on some devices."</string>
    <string name="pref_summary_ignore_media_store_artwork">Can increase the album cover quality but causes slower image loading times. Only enable this if you have problems with low resolution artworks.</string>
    <string name="pref_summary_colored_navigation_bar">Colors the navigation bar in the primary color.</string>
    <string name="pref_summary_colored_app_shortcuts">Colors the app shortcuts in the primary color.</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="support_development">Support development</string>
    <string name="library">Library</string>
    <string name="bug_report_issue">Issue</string>
    <string name="login">Login</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="your_account_data_is_only_used_for_authentication">Your account data is only used for authentication.</string>
    <string name="you_will_be_forwarded_to_the_issue_tracker_website">You will be forwarded to the issue tracker website.</string>
</resources>