<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.kabouzeid.materialmusic.ui.activities.MusicControllerActivity">
    <item
        android:id="@+id/action_playing_queue"
        android:title="@string/action_playing_queue"
        android:icon="@drawable/playlist"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_go_to_album"
        android:title="@string/action_go_to_album"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_go_to_artist"
        android:title="@string/action_go_to_artist"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_tag_editor"
        android:title="@string/action_tag_editor"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_details"
        android:title="@string/action_details"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
