<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_favorite"
        android:icon="@drawable/ic_favorite_outline_white_24dp"
        android:title="@string/action_add_to_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_shuffle_all"
        android:title="@string/action_shuffle_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_playing_queue"
        android:title="@string/action_clear_playing_queue"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sleep_timer"
        android:title="@string/action_sleep_timer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_equalizer"
        android:orderInCategory="99"
        android:title="@string/equalizer"
        app:showAsAction="never" />
</menu>
