<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_notification">

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="classic_notification"
            android:summary="@string/pref_summary_classic_notification"
            android:title="@string/pref_title_classic_notification" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="colored_notification"
            android:summary="@string/pref_summary_colored_notification"
            android:title="@string/pref_title_colored_notification" />

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>
