<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.kabouzeid.gramophone.prefs.DynamicPreferenceCategory android:title="@string/pref_header_audio">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="gapless_playback"
            android:layout="@layout/preference_custom"
            android:summary="@string/pref_summary_gapless_playback"
            android:title="@string/pref_title_gapless_playback"
            android:widgetLayout="@layout/preference_dynamic_checkbox" />

        <Preference
            android:key="equalizer"
            android:layout="@layout/preference_custom"
            android:title="@string/equalizer" />

    </com.kabouzeid.gramophone.prefs.DynamicPreferenceCategory>

</PreferenceScreen>