<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/navigation_drawer_menu_category_sections"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/library" />
        <item
            android:enabled="false"
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="Folders (soon)" />
    </group>

    <group
        android:id="@+id/navigation_drawer_menu_category_other"
        android:checkableBehavior="none">
        <item
            android:id="@+id/support_development"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/support_development" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/action_about" />
    </group>

</menu>
