<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_to_playlist"
        android:icon="@drawable/ic_playlist_add_black_24dp"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_to_current_playing"
        android:icon="@drawable/ic_library_add_black_24dp"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_playlist"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_playlists_title"
        app:showAsAction="ifRoom" />

</menu>