<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.kabouzeid.materialmusic.ui.activities.AlbumDetailActivity">

    <item
        android:id="@+id/action_current_playing"
        android:icon="@drawable/music_box"
        android:title="@string/action_current_playing"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_go_to_artist"
        android:title="@string/action_go_to_artist"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_tag_editor"
        android:title="@string/action_tag_editor"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
