<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kabouzeid.gramophone.ui.activities.PlaylistDetailActivity">

    <item
        android:id="@+id/action_now_playing"
        android:icon="@drawable/ic_play_circle_fill_white_24dp"
        android:title="@string/action_now_playing"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_playing_queue"
        android:icon="@drawable/ic_queue_music_white_24dp"
        android:title="@string/action_playing_queue"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_shuffle_playlist"
        android:title="@string/action_shuffle_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_equalizer"
        android:orderInCategory="99"
        android:title="@string/equalizer"
        app:showAsAction="never" />

</menu>
