<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.kabouzeid.gramophone.prefs.DynamicPreferenceCategory android:title="@string/pref_header_images">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="ignore_media_store_artwork"
            android:layout="@layout/preference_custom"
            android:summary="@string/pref_summary_ignore_media_store_artwork"
            android:title="@string/pref_title_ignore_media_store_artwork"
            android:widgetLayout="@layout/preference_dynamic_checkbox" />

        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:defaultValue="only_wifi"
            android:entries="@array/pref_auto_download_images_titles"
            android:entryValues="@array/pref_auto_download_images_values"
            android:key="auto_download_images_policy"
            android:layout="@layout/preference_custom"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_auto_download_artist_images" />

    </com.kabouzeid.gramophone.prefs.DynamicPreferenceCategory>

</PreferenceScreen>